2008-06-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsettingseditor.[ch]: add dummy import and export
	buttons, give the list a minimum size.

	* app/widgets/gimpsettingsbox.c: use the correct dialog border.

2008-06-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsettingsbox.c (gimp_settings_box_constructor):
	tweak buttons to look the same and have no spacing between them.

2008-06-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsettingsbox.c (gimp_settings_box_constructor):
	move "Add to favorites" out of the menu into a small button
	showing a '+' icon. Add a separator between the import/export and
	the manage menu items.

2008-06-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsettingseditor.[ch]: enable renaming the
	settings objects by editing them directly in the list (renaming a
	recent setting moves it to the favorites section). Enable deleting
	settings. None of these changes is saved yet (need to trigger a
	save by confirming the tool or storing the current settings as
	favorite).

2008-06-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpitemtreeview.c (gimp_item_tree_view_name_edited):
	don't dereference a NULL GError.

2008-06-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainercombobox.[ch]: made the model column
	enum public and namespaced it.

	* app/widgets/gimpsettingsbox.c: use the enum value instead of a
	magic number.

	* app/widgets/gimpsettingseditor.c: add a separator between
	recently used settings and favorites.

2008-06-23  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimpfreeselecttool.c
	(gimp_free_select_tool_modifier_key): Make switching selection
	mode through modifier keys work again.

2008-06-22  Michael Natterer  <mitch@gimp.org>

	* app/widgets/Makefile.am
	* app/widgets/widgets-types.h
	* app/widgets/gimpsettingseditor.[ch]: skeleton of a widget to
	manage the list of saved settings for the image map tools. Does